fix(registeration):improved registeration and login